[gd_scene load_steps=16 format=3 uid="uid://j1lptnjrrw0k"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_n0i3q"]
[ext_resource type="FontFile" uid="uid://bdxx3t7yctmg5" path="res://assets/Kurland_Font_0_34/Kurland.ttf" id="2_jcou7"]
[ext_resource type="Texture2D" uid="uid://dkvse8vs7opc2" path="res://assets/Lucid V1.2/PNG/Flat/64/Play.png" id="3_qyq6r"]
[ext_resource type="Texture2D" uid="uid://bsaavev42tsr0" path="res://assets/Lucid V1.2/PNG/Flat/64/Floppy-Drive.png" id="4_lsams"]
[ext_resource type="Texture2D" uid="uid://c2t1r8reres0g" path="res://assets/Lucid V1.2/PNG/Flat/64/Grid.png" id="5_4pe1y"]
[ext_resource type="Texture2D" uid="uid://twtnhmyunrdb" path="res://assets/Lucid V1.2/PNG/Flat/64/Gear.png" id="6_g2n4k"]
[ext_resource type="Texture2D" uid="uid://pf5iewgoprdn" path="res://assets/Lucid V1.2/PNG/Flat/64/Star.png" id="7_4aapv"]
[ext_resource type="Texture2D" uid="uid://kyd7ed82alap" path="res://assets/Lucid V1.2/PNG/Flat/64/Power.png" id="8_blfnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4j31m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u80y0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wnsgm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ml7t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0qvgr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5i6s0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7fjdp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n0i3q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_jcou7")
theme_override_font_sizes/font_size = 70
text = "Paradox Hunter
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 22
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
tooltip_text = "Start
"
focus_neighbor_top = NodePath("../QuitButton")
theme_override_colors/font_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_jcou7")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_4j31m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u80y0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u80y0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_u80y0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u80y0")
text = "Start"
icon = ExtResource("3_qyq6r")
alignment = 0
icon_alignment = 2

[node name="LoadDataButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Load Data"
theme_override_colors/font_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_jcou7")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_wnsgm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wnsgm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wnsgm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wnsgm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wnsgm")
text = "Load Data"
icon = ExtResource("4_lsams")
alignment = 0
icon_alignment = 2

[node name="LevelsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Select Level
"
theme_override_colors/font_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_jcou7")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_8ml7t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8ml7t")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8ml7t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8ml7t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8ml7t")
text = "Levels"
icon = ExtResource("5_4pe1y")
alignment = 0
icon_alignment = 2

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Settings
"
theme_override_colors/font_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_jcou7")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_0qvgr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0qvgr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0qvgr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0qvgr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0qvgr")
text = "Settings"
icon = ExtResource("6_g2n4k")
alignment = 0
icon_alignment = 2

[node name="CreditsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Credits"
theme_override_colors/font_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_jcou7")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_5i6s0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5i6s0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5i6s0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5i6s0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5i6s0")
text = "Credits"
icon = ExtResource("7_4aapv")
alignment = 0
icon_alignment = 2

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Quit
"
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.647059, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_jcou7")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_7fjdp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7fjdp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7fjdp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7fjdp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7fjdp")
text = "Quit"
icon = ExtResource("8_blfnl")
alignment = 0
icon_alignment = 2

[connection signal="pressed" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LoadDataButton" to="." method="_on_load_data_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LevelsButton" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
